--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "main.c" "ui.c"
     INCLUDE_DIRS "."
-    REQUIRES lcd_st7789 touch_cst328 esp_lvgl_port i2c_helper qmi8658
+    REQUIRES lcd_st7789 touch_cst328 esp_lvgl_port i2c_helper qmi8658 sd_mmc_helper
 )
